--- a/langchain/package.json
+++ b/langchain/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "langchain",
+  "name": "@readme/langchain",
   "version": "0.0.181",
   "description": "Typescript bindings for langchain",
   "type": "module",
@@ -796,9 +796,10 @@
     "url": "git@github.com:langchain-ai/langchainjs.git"
   },
   "scripts": {
-    "build": "yarn clean && yarn build:esm && yarn build:cjs && node scripts/create-entrypoints.js && node scripts/check-tree-shaking.js",
+    "build": "yarn clean && yarn build:esm && yarn build:cjs && node scripts/create-entrypoints.js && node scripts/check-tree-shaking.js && yarn build:tsup",
     "build:esm": "NODE_OPTIONS=--max-old-space-size=4096 tsc --outDir dist/ && rimraf dist/tests dist/**/tests",
     "build:cjs": "NODE_OPTIONS=--max-old-space-size=4096 tsc --outDir dist-cjs/ -p tsconfig.cjs.json && node scripts/move-cjs-to-dist.js && rimraf dist-cjs",
+    "build:tsup": "tsup",
     "build:watch": "node scripts/create-entrypoints.js && tsc --outDir dist/ --watch",
     "lint": "NODE_OPTIONS=--max-old-space-size=4096 eslint src && dpdm --exit-code circular:1 --no-warning --no-tree src/*.ts src/**/*.ts",
     "lint:fix": "yarn lint --fix",
@@ -943,6 +944,7 @@
     "sqlite3": "^5.1.4",
     "srt-parser-2": "^1.2.2",
     "ts-jest": "^29.1.0",
+    "tsup": "^7.2.0",
     "typeorm": "^0.3.12",
     "typescript": "^5.0.0",
     "typesense": "^1.5.3",
@@ -2681,6 +2683,10 @@
       "types": "./runnables/remote.d.ts",
       "import": "./runnables/remote.js",
       "require": "./runnables/remote.cjs"
+    },
+    "./readme-text-split": {
+      "import": "./dist-readme/text_splitter.js",
+      "require": "./dist-readme/text_splitter.cjs"
     },
     "./package.json": "./package.json"
   }
